@@ -3,7 +3,8 @@
 <p>Your subscription to email-address {EMAIL} have been changed by <a href="{USERLINK}">{USERNAME}</a> with IP-address
     {IP}.</p>
 
-<p>For further information please click on following link:<br>{ACTLINK}</p>
+<p>For further information please click on following link:<br>
+<a href="{ACTLINK}">{ACTLINK}</a></p>
 
 <p>-----------------------<br>
     {X_SITENAME}<br>
