@@ -1,0 +1,12 @@
+<p>Hallo {SEX} {FIRSTNAME} {LASTNAME}</p>
+
+<p>Die Newsletteranmeldungen zur Emailadresse {EMAIL} wurden von <a href="{USERLINK}">{USERNAME}</a> mit der IP-Adresse {IP} geändert.</p>
+
+<p>Für weitere Informationen klicken Sie auf nachfolgenden Link:<br>
+<a href="{ACTLINK}">{ACTLINK}</a></p>
+
+
+<p>-----------------------<br>
+{X_SITENAME}<br>
+({X_SITEURL})<br>
+Webmaster {X_ADMINMAIL}</p>
