@@ -9,9 +9,17 @@
         <{$content}>
         <br>
     </div>
+	<div>
+		<ul>
+			<{foreach item='attachment' from=$attachments}>
+				<li><a href="<{$attachment.attachment_link}>"><{$attachment.attachment_name}></a></li>
+			<{/foreach}>
+		</ul>
+	</div>
   
     <div class="letter_footer" style="width:100%;font-family:Arial,Helvetica,sans-serif;font-size:11px;padding-top:50px;">
         <div style="width:100%;border-top:1px solid #5ca82e">&nbsp;</div>
-        <p style="margin-top:10px;margin-bottom:20px;">Wenn Sie sich von diesem Newsletter abmelden wollen, dann klicken Sie bitte <a href="<{$unsubscribe_link}>" target="_blank">hier</a></p>
+        <p style="margin-top:10px;margin-bottom:20px;">Wenn Sie eine Liste Ihrer Newsletteranmeldungen sehen wollen, dann klicken Sie bitte <a href="<{$listsubscription_link}>" target="_blank">hier</a></p>
+        <p style="margin-top:10px;margin-bottom:20px;">Wenn Sie sich von allen Newsletter abmelden wollen, dann klicken Sie bitte <a href="<{$unsubscribe_link}>" target="_blank">hier</a></p>
     </div>
 </div>
